fix: do not always show the scrollbar

--- a/public/stylus/main.styl
+++ b/public/stylus/main.styl
@@ -4,3 +4,7 @@ $body-font-family = 'Nunito'
 @import '~vuetify/src/stylus/settings/_variables'
 
 @import '~vuetify/src/stylus/app.styl'
+
+html {
+  overflow-y: auto !important;
+}
